# BotService

./: .gitignore  Dockerfile  README.md  README.txt  k8s-deployment.yaml  main_bot.py  pyproject.toml
.github/workflows/: deploy.yml
cfg/: .template.env  сonfig.py
locale/en_US/LC_MESSAGES/: botService.mo  botService.po
locale/ru_RU/LC_MESSAGES/: botService.mo  botService.po
src/dto/: learning_set.py  schema.py
src/grpc/: mapping_helper.py
src/grpc/process_service/: client_process_manager.py  process_service.py  process_service_pb2.py  process_service_pb2_grpc.py
src/grpc/user_service/: client_user_manager.py  user_service.py  user_service_pb2.py  user_service_pb2_grpc.py
src/grpc/word_service/: client_word_manager.py  word_service.py
src/telegram/: gettext_setup.py  main_bot.py  telegram_const.py  telegram_decorator.py
src/telegram/handlers/: custom_keyboards.py  handler_adding_words.py  handler_learning_process.py  handler_registration.py  handler_settings.py  telegram_state.py
tests/unit/: test_data_preparation.py
tests/unit/telegram/handlers/: test_handler_adding_words.py
